[gd_scene load_steps=6 format=3 uid="uid://bie80dxl85so0"]

[ext_resource type="Script" path="res://rps/rps_actor.gd" id="1_62ma0"]
[ext_resource type="Texture2D" uid="uid://cafad80pb2nq1" path="res://rps/rock.svg" id="2_w65x6"]
[ext_resource type="Texture2D" uid="uid://c3dt53n26bvdc" path="res://rps/paper.svg" id="3_esuf3"]
[ext_resource type="Texture2D" uid="uid://qgjxdmu302qt" path="res://rps/scissors.svg" id="4_lxd6q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vmnf8"]
radius = 16.0

[node name="RPSActor" type="Area2D"]
script = ExtResource("1_62ma0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vmnf8")

[node name="RockSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_w65x6")

[node name="PaperSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_esuf3")

[node name="ScissorsSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_lxd6q")
